# Agisops

./: .env.example  .gitignore  Makefile  README.md  aegisops_project_guide.md  docker-compose.yml  project_guide.md
.github/workflows/: ci.yml
docs/: architecture.md
java-services/: pom.xml  spotbugs-exclude.xml
java-services/api-gateway/: pom.xml
java-services/api-gateway/src/main/java/com/aegisops/gateway/: GatewayApplication.java
java-services/api-gateway/src/main/resources/: application.yml
java-services/auth-service/: pom.xml
java-services/auth-service/src/main/java/com/aegisops/auth/: AuthApplication.java
java-services/auth-service/src/main/resources/: application.yml
java-services/common/: pom.xml
java-services/common/src/main/resources/db/migration/: V001__initial_schema.sql  V002__add_vector_extension.sql  V003__add_events_table.sql  V004__seed_data.sql
java-services/ingestion-service/: pom.xml
java-services/ingestion-service/src/main/resources/: application.yml
java-services/notification-service/: pom.xml
java-services/notification-service/src/main/resources/: application.yml
java-services/verification-service/: pom.xml
java-services/verification-service/src/main/resources/: application.yml
java-services/workflow-orchestrator/: pom.xml
java-services/workflow-orchestrator/src/main/resources/: application.yml
proto/aegisops/: agent.proto  common.proto  retrieval.proto
python-services/: compile_protos.sh  event_consumer.py  pyproject.toml  requirements-dev.txt  requirements.txt  retrieval_service.py
(+44 files in other folders)
